Add postCreateCommand to enable Helm for AKS in devcontainer.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,5 +11,6 @@
       "jdkDistro": "ms",
       "installMaven": "true"
     }
-  }
+  },
+  "postCreateCommand": "azd config set alpha.aks.helm on"
 }
