--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -30,6 +30,7 @@ jobs:
           az extension add --upgrade -n containerapp --allow-preview true
           az extension add --upgrade -n serviceconnector-passwordless --allow-preview true
           az version
+          azd config set alpha.aks.helm on
 
       - name: Set up JDK 17
         uses: actions/setup-java@v2
