--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,8 +12,5 @@
       "installMaven": "true"
     }
   },
-  "postCreateCommand": [
-    "azd config set alpha.aks.helm on",
-    "helm repo add cargotracker-liberty-aks https://azure-javaee.github.io/cargotracker-liberty-aks"
-  ]
+  "postCreateCommand": "azd config set alpha.aks.helm on"
 }
