--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,5 +12,5 @@
       "installMaven": "true"
     }
   },
-  "postCreateCommand": "azd config set alpha.aks.helm on"
+  "postCreateCommand": "azd config set alpha.aks.helm on && helm repo add cargotracker-liberty-aks https://azure-javaee.github.io/cargotracker-liberty-aks"
 }
