--- a/.github/workflows/validation-sample-workflow.yml
+++ b/.github/workflows/validation-sample-workflow.yml
@@ -19,7 +19,7 @@ jobs:
         id: validation
         with:
           validateAzd: true
-          useDevContainer: true
+          useDevContainer: false
         env:
           AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
