--- a/.github/workflows/validation-sample-workflow.yml
+++ b/.github/workflows/validation-sample-workflow.yml
@@ -13,23 +13,14 @@ jobs:
     name: template validation
     steps:
       - uses: actions/checkout@v4
-
-      - uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'maven'
-
-      - name: Install azd
-        uses: Azure/setup-azd@v2
-
-      - name: azd config
-        run: |
-          azd config set alpha.aks.helm on
+          path: ${{ runner.temp }}/template
 
       # https://github.com/microsoft/template-validation-action
       - uses: microsoft/template-validation-action@v0.3.5
         id: validation
+        with:
+          workingDirectory: ${{ runner.temp }}/template
         env:
           AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
