--- a/.github/workflows/validation-sample-workflow.yml
+++ b/.github/workflows/validation-sample-workflow.yml
@@ -14,13 +14,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          path: ${{ runner.temp }}/template
+          path: ${{ github.workspace }}/template
 
       # https://github.com/microsoft/template-validation-action
       - uses: microsoft/template-validation-action@v0.3.5
         id: validation
         with:
-          workingDirectory: ${{ runner.temp }}/template
+          workingDirectory: ${{ github.workspace }}/template
         env:
           AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
