Add permissions block to template_validation_job in workflow configuration.

--- a/.github/workflows/validation-sample-workflow.yml
+++ b/.github/workflows/validation-sample-workflow.yml
@@ -9,6 +9,10 @@ permissions:
 
 jobs:
   template_validation_job:
+    permissions:
+      contents: read
+      id-token: write
+      pull-requests: write
     runs-on: ubuntu-latest
     name: template validation
     steps:
