Rename azd command from 'dpwm' to 'down' for clarity and accuracy.

--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: AZD Down
         run: |
-          azd dpwm
+          azd down
 
       - name: Show azd environments
         run: |
