Refactor validation workflow to include Java setup and azd config.

--- a/.github/workflows/validation-sample-workflow.yml
+++ b/.github/workflows/validation-sample-workflow.yml
@@ -9,28 +9,30 @@ permissions:
 
 jobs:
   template_validation_job:
-    permissions:
-      contents: read
-      id-token: write
-      pull-requests: write
     runs-on: ubuntu-latest
     name: template validation
     steps:
       - uses: actions/checkout@v4
 
-      - name: Get current branch name
-        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven'
 
-      - name: Clone repo
-        working-directory: ${{ runner.temp }}
+      - name: Install azd
+        uses: Azure/setup-azd@v2
+
+      - name: azd config
         run: |
-          git clone --branch $BRANCH_NAME --single-branch https://github.com/${{ github.repository }} template
+          azd config set alpha.aks.helm on
 
       # https://github.com/microsoft/template-validation-action
       - uses: microsoft/template-validation-action@v0.3.5
         id: validation
         with:
-          workingDirectory: ${{ runner.temp }}/template
+          validateAzd: true
+          useDevContainer: false
         env:
           AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
